Fixing invisible prev/next arrows in calendar popup

--- a/src/components/DatePicker/_DatePicker.scss
+++ b/src/components/DatePicker/_DatePicker.scss
@@ -20,6 +20,7 @@
   .react-datepicker__navigation {
     &-icon {
       top: 5px;
+      width: 0px;
       &::before {
         border-color: var(--nypl-colors-ui-gray-medium);
       }
